# highlights

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  main.css  main.py  pyproject.toml
.github/workflows/: publish_docker_image.yml
src/: __init__.py  main.py
src/data/: authors.json  quotations.json  sources.json  tags.json
src/models/: author.py  base.py  quotation.py  source.py  tag.py
src/routers/: authors.py  health.py  healthcheck.py  highlights.py  sources.py  tags.py
tests/: conftest.py  test_app_factory.py  test_main.py
tests/models/: test_author.py  test_base.py  test_quotation.py  test_source.py  test_tag.py
tests/routers/: test_authors.py  test_health.py  test_highlights.py  test_sources.py  test_tags.py
