[project]
name = "highlights"
version = "0.1.0"
description = "API serving highlighted quotes from books I've read."
readme = "README.md"
authors = [
    { name = "Joe Risner" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.1",
]

#################
##### Tools #####
#################

[tool.coverage.html]
directory = "tests/coverage/html"

[tool.coverage.run]
branch = true
data_file = "tests/coverage/.coverage"
include = ["src/*"]

[tool.coverage.xml]
output = "tests/coverage/coverage.xml"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=html",
    "--cov-report=xml",
    "--junitxml=tests/test_results/junit.xml",
    "--strict-config"
]
cache_dir = "tests/.pytest_cache"
junit_suite_name = "highlights"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
# Pyflakes, pycodestyle, flake8-simplify, pyupgrade, pydocstyle
select = ["F", "E", "SIM", "UP"]
