[project]
name = "highlights"
version = "0.1.0"
description = "API serving highlighted quotes from books I've read."
readme = "README.md"
authors = [
    { name = "Joe Risner" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "ty>=0.0.1a23",
]

#################
##### Tools #####
#################

[tool.coverage.html]
directory = "tests/coverage/html"

[tool.coverage.run]
branch = true
data_file = "tests/coverage/.coverage"
include = ["src/*"]

[tool.coverage.xml]
output = "tests/coverage/coverage.xml"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=html",
    "--cov-report=xml",
    "--junitxml=tests/test_results/junit.xml",
    "--strict-config",
    "-vv"
]
cache_dir = "tests/.pytest_cache"
junit_suite_name = "highlights"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PT",    # flake8-pytest-style
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "I",     # isort
    "FAST",  # fastapi
    "N"      # pep8-naming
]
ignore = ["ANN401"]  # allow use of `Any` type

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",  # ignore `annotation` rules for test files
    "S101"  # allow `assert` in tests
] 

[tool.ty.rules]
unresolved-import = "ignore"
