[project]
name = "highlights"
version = "1.0.0"
description = "API serving highlighted quotes from books I've read."
readme = "README.md"
authors = [
    { name = "Joe Risner" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

#################
##### Tools #####
#################

[tool.coverage.html]
directory = "tests/coverage/html"

[tool.coverage.run]
branch = true
data_file = "tests/coverage/.coverage"
include = ["src/*"]

[tool.coverage.xml]
output = "tests/coverage/coverage.xml"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=html",
    "--cov-report=xml",
    "--junitxml=tests/test_results/junit.xml",
    "--strict-config",
    "-vv"
]
cache_dir = "tests/.pytest_cache"
junit_suite_name = "highlights"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PT",    # flake8-pytest-style
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "I",     # isort
    "FAST",  # fastapi
    "N"      # pep8-naming
]
ignore = ["ANN401"]  # allow use of `Any` type

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",  # ignore `annotation` rules for test files
    "S101"  # allow `assert` in tests
]

[tool.ty.rules]
unresolved-import = "ignore"
